# Efficient_ZKP_for_Affine-forms

./: Cargo.toml  NOTICE.md  README.md
random_data/: dispose_1e9_10_0  dispose_1e9_10_1  dispose_1e9_10_2  dispose_1e9_10_3  dispose_1e9_10_4  dispose_1e9_10_5  dispose_1e9_10_6  dispose_1e9_10_7  dispose_1e9_10_8  dispose_1e9_10_9  private_1e9_10_0  private_1e9_10_1  private_1e9_10_2  private_1e9_10_3  private_1e9_10_4  private_1e9_10_5  private_1e9_10_6  private_1e9_10_7  private_1e9_10_8  private_1e9_10_9  proof_1e9_10_0  proof_1e9_10_1  proof_1e9_10_2  proof_1e9_10_3  proof_1e9_10_4  proof_1e9_10_5  proof_1e9_10_6  proof_1e9_10_7  proof_1e9_10_8  proof_1e9_10_9  raw_1e9_10_0  raw_1e9_10_1  raw_1e9_10_2  raw_1e9_10_3  raw_1e9_10_4  raw_1e9_10_5  raw_1e9_10_6  raw_1e9_10_7  raw_1e9_10_8  raw_1e9_10_9
random_data/1e9_100000_5/: proof_0.in  proof_1.in  proof_2.in  proof_3.in  proof_4.in
random_data/1e9_10000_5/: private_0.in  private_1.in  private_2.in  private_3.in  private_4.in  private_5.in  private_6.in  private_7.in  private_8.in  private_9.in  proof_0.in  proof_1.in  proof_2.in  proof_3.in  proof_4.in  proof_5.in  proof_6.in  proof_7.in  proof_8.in  proof_9.in
random_data/1e9_1000_5/: private_0.in  private_1.in  private_2.in  private_3.in  private_4.in  private_5.in  private_6.in  private_7.in  private_8.in  private_9.in  proof_0.in  proof_1.in  proof_2.in  proof_3.in  proof_4.in  proof_5.in  proof_6.in  proof_7.in  (+12 more)
src/: commitments.rs  curve25519.rs  lib.rs  main.rs  nozk_protocol.rs  public_parameters.rs  random.rs  runtime.rs  transcript.rs  zk_protocol.rs
(+115 files in other folders)
